[project]
name = "mcp-server-cost-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.76.0",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "typer[all]>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[project.scripts]
mcp-tok = "mcp_tok.cli:app"